<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:showIn="@layout/activity_main"
    >
    <View
        android:id="@+id/dismiss"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".3" />
    <TextView
        android:id="@+id/add_new_task_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/dismiss"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_task_faild_par"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_task"
        app:layout_constraintTop_toBottomOf="@id/add_new_task_tv"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_task_details"
        app:layout_constraintTop_toBottomOf="@id/add_task_faild_par"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_discription_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_date_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/select_time_til"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_til">

        <TextView
            android:id="@+id/select_date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/description_til" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_time_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/select_date_til"
        app:layout_constraintTop_toBottomOf="@+id/description_til">

        <TextView
            android:id="@+id/select_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_time"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabTaskDone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/blue"
        android:src="@drawable/done_task"
        android:tintMode="@color/white"
        app:layout_constraintTop_toBottomOf="@id/select_time_til"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:padding="32dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>